# rust_master_mind

./: .gitignore  Cargo.toml
src/: main.rs
