[package]
name = "mastermind"
version = "0.1.0"
authors = ["Pokemod97 <cadenkline9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mastermind_core = {git = "https://github.com/Pokemod97/master_mind_core"}